--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
     "@mui/x-date-pickers": "^8.10.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "next": "15.5.0",
-    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -39,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "prisma": "^6.14.0",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
